tests/custom/STARIS_2022/operation-type-errors/participants-type-error/stderr.expected
Error:
    Parser error in file: participants-type-error.essence Error is:
ValidatorError participants-type-error.essence:2:28:
  |
2 | such that b = participants(5) 
  |                            ^
Type error:
	Expected: partition from ?
	Got: int

